# toy-example-of-iLQR

./: .gitignore  CMakeLists.txt  README.md  env.sh  test.py
config/: scenario_two_borrow.yaml
include/: cilqr_solver.hpp  utils.hpp
src/: cilqr_solver.cpp  global_config.cpp  motion_planning.cpp  utils.cpp
